--- a/salt/apache/cove.conf
+++ b/salt/apache/cove.conf
@@ -5,7 +5,10 @@
         ServerAdmin code@opendataservices.coop
         ServerAlias {% if branch != pillar.default_branch %}{{ branch }}.{% endif %}{{ pillar.domain_prefix }}cove.opendataservices.coop cove.*.default.opendataservices.uk0.bigv.io
         ServerAlias *.standard.open-contracting.org standard.open-contracting.org
+        ServerAlias 104.199.*.*
         DocumentRoot {{ djangodir }} 
+
+        Timeout 10000000
 
         {{ banner }}
 
