[OpenDataServices/cove#489] Try setting up RPAF to rewrite IP address

--- a/salt/apache/cove.conf
+++ b/salt/apache/cove.conf
@@ -7,6 +7,12 @@
         ServerAlias *.standard.open-contracting.org standard.open-contracting.org
         DocumentRoot {{ djangodir }} 
 
+        # Use mod_remoteip to set the remote IP address based on
+        # X-Forwarded-For if it's been done by our reverse proxy
+        RPAFEnable On
+        RPAFproxy_ips 2001:41c9:1:420::132
+        #RPAFproxy_ips tmp2.default.opendataservices.uk0.bigv.io
+
         {{ banner }}
 
         <Location "/">
