--- a/salt/prometheus-client/prometheus-node-exporter.service
+++ b/salt/prometheus-client/prometheus-node-exporter.service
@@ -7,7 +7,7 @@ After=network-online.target
 User={{ user }}
 Group={{ user }}
 Type=simple
-ExecStart=/home/{{ user }}/node_exporter-{{ pillar.prometheus.node_exporter_version }}.linux-amd64/node_exporter --web.listen-address=localhost:9157
+ExecStart=/home/{{ user }}/run.sh
 
 [Install]
 WantedBy=multi-user.target
