--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-dist: trusty
 language: python
 addons:
   chrome: stable
@@ -6,6 +5,7 @@ jobs:
   include:
     - stage: test-iati-360
       python: "3.5"
+      dist: xenial
       install:
         - "git clone 'https://github.com/OpenDataServices/cove.git'"
         - "cd cove"
@@ -17,6 +17,7 @@ jobs:
         #- "CUSTOM_SERVER_URL=http://iati.cove.opendataservices.coop/ DJANGO_SETTINGS_MODULE=cove_iati.settings py.test cove_iati/tests_functional.py"
     - stage: test-ocds
       python: "3.6"
+      dist: bionic
 
       install:
         - "git clone 'https://github.com/open-contracting/cove-ocds.git' coveocds"
